# fractal_studio

./: .dockerignore  .gitignore  Makefile  README.md  dev.sh  docker-compose.dev.yml
backend/: .env.compute.example  CMakeLists.txt  Dockerfile  README.md  requirements-test.txt
backend/src/: main.cpp
backend/src/api/: ln_map_reuse.hpp  routes_artifacts.cpp  routes_benchmark.cpp  routes_common.hpp  routes_compute_v1.cpp  routes_ln.cpp  routes_map.cpp  routes_mesh.cpp  routes_modules.cpp  routes_platform_compute.cpp  routes_points.cpp  routes_runs.cpp  routes_variants.cpp  routes_video.cpp
backend/src/compute/: color_program.cpp  color_program.hpp  color_program_json.cpp  color_program_json.hpp  colorize.cpp  colorize.hpp  colormap.hpp  engine_select.cpp  engine_select.hpp  escape_time.hpp  fx64_raw.hpp  image_io.cpp  image_io.hpp  ln_map.cpp  ln_map.hpp  ln_map_avx2.cpp  ln_map_avx512.cpp  map_kernel.cpp  map_kernel.hpp  map_kernel_avx2.cpp  map_kernel_avx2.hpp  map_kernel_avx512.cpp  map_kernel_avx512.hpp  orbit_program.cpp  orbit_program.hpp  orbit_program_json.cpp  orbit_program_json.hpp  perturbation.cpp  perturbation.hpp  perturbation_avx2.cpp  perturbation_avx2.hpp  perturbation_avx512.cpp  perturbation_avx512.hpp  scalar.hpp  special_points.cpp  special_points.hpp  special_points_hp.cpp  tile_scheduler.cpp  tile_scheduler.hpp  transition_kernel.cpp  (+7 more)
backend/src/compute/cuda/: ln_map.cu  ln_map.cuh  map_kernel.cu  map_kernel.cuh  perturb_kernel.cu  perturb_kernel.cuh  special_points.cu  special_points.cuh  transition_kernel.cu  transition_kernel.cuh  transition_volume.cu  transition_volume.cuh  video_warp.cu  video_warp.cuh
backend/src/compute/hs/: heightfield_mesh.cpp  heightfield_mesh.hpp
backend/src/core/: db.cpp  http_range.hpp  http_server.cpp  job_runner.cpp
backend/src/include/: db.hpp  http_server.hpp  job_runner.hpp  routes.hpp  types.hpp
backend/src/tests/: artifact_routes_smoke.cpp  color_program_smoke.cpp  compute_path_diff.cpp  compute_v1_http_smoke.py  hs_orbit_smoke.cpp  http_range_smoke.cpp  job_runner_reconcile_smoke.cpp  ln_map_reuse_smoke.cpp  orbit_program_smoke.cpp  special_points_smoke.cpp
backend/src/tests/compute_v1/: __init__.py  client.py  conftest.py  payloads.py  platform_client.py  platform_payloads.py  test_artifacts.py  test_auth.py  (+19 more)
platform-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
platform-backend/app/: __init__.py  main.py
platform-backend/app/assets/: __init__.py  cleanup_service.py  media_worker.py  models.py  ports.py  reader.py  repository.py  router.py  service.py
platform-backend/app/auth/: __init__.py  creator_profile_repository.py  models.py  rate_limit.py  router.py  service.py  session_repository.py  session_service.py  user_repository.py  user_role_repository.py
platform-backend/app/commerce/: __init__.py  entitlement_reader.py  models.py  ports.py  repository.py  router.py  service.py
platform-backend/app/core/: __init__.py  access_middleware.py  audit_repository.py  audit_writer.py  config.py  db.py  http.py  idempotency_repository.py  idempotency_service.py  logging.py  request_context.py
platform-backend/app/finance/: __init__.py  cleanup_service.py  manual_payout_service.py  models.py  payout_operator_router.py  payout_router.py  repository.py  sale_ledger_writer.py
platform-backend/app/infrastructure/: __init__.py
platform-backend/app/marketplace/: __init__.py  licence_registry.py  models.py  ports.py  repository.py  router.py  service.py
platform-backend/app/migrations/: env.py
platform-backend/app/outbox/: __init__.py  models.py  repository.py  service.py  worker.py
platform-backend/app/studio/: __init__.py  compute_request_mapper.py  models.py  preview_service.py  quota_expiry_scheduler.py  quota_service.py  recipe_repository.py  recipe_service.py  render_job_repository.py  render_job_service.py  render_worker.py  rgba_png_encoder.py  router.py  schemas.py  service.py
platform-backend/docs/: compute-openapi-audit.md  compute-openapi.yaml  compute-spec.md  platform-backend-spec.md
platform-backend/docs/gaps/: M1_M2.md  M3.md
platform-backend/docs/tasks/: 00-specification-reconciliation.md  01-foundation-dev-stand-observability.md  02-postgresql-schema-migrations.md  03-auth-sessions-rbac-idempotency.md  04-outbox-core-worker-shell.md  05-recipes-and-bounded-preview.md  06-durable-render-jobs-compute-worker.md  07-artifact-ingestion-object-storage.md  08-media-library-and-protected-downloads.md  09-catalogue-listings-licences-favourites.md  10-sale-ledger-and-balance-projection.md  11-checkout-orders-entitlements.md  12-alipay-webhook-reconciliation-reversals.md  13-manual-creator-payout-requests.md  14-full-mvp-e2e-regression.md  15-compute-production-contract-prerequisite.md  README.md  dependency-graph.md
platform-backend/migrations/: env.py  script.py.mako
platform-backend/migrations/versions/: 20260723_0001_initial_platform_schema.py  20260723_0002_auth_constraints.py  20260723_0003_outbox_leases.py  20260724_0004_render_job_compute_request.py  20260724_0005_outbox_retry_counter.py  20260724_0006_storage_cleanup_tasks.py  20260724_0007_asset_media_lifecycle.py  20260724_0008_marketplace_search.py  20260724_0009_marketplace_listing_cursors.py  20260724_0010_ledger_append_only.py  20260724_0011_checkout_indexes.py  20260724_0012_order_items_append_only.py  20260724_0013_payment_reconciliation_indexes.py
platform-backend/scripts/: dev-migrate-watch.sh  dev-user.sh
platform-backend/tests/: conftest.py
platform-backend/tests/e2e/: alipay_stub.py  compute_stub.py  test_alipay_settlement.py  test_asset_library.py  test_auth.py  test_checkout.py  test_marketplace.py  test_outbox.py  test_recipes_preview.py  test_render_jobs.py  test_sale_ledger.py
platform-backend/tests/unit/: test_app.py  test_asset_ingestion.py  test_auth_models.py  test_compute_client.py  test_config.py  test_gap_closures.py  test_media_library.py  test_outbox_service.py  test_render_mapper.py  test_studio.py
(+57 files in other folders)
