[project]
name = "fractal-platform-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "boto3>=1.35,<2",
  "cryptography>=44,<47",
  "fastapi>=0.115,<1",
  "greenlet>=3.1,<4",
  "httpx>=0.28,<1",
  "orjson>=3.10,<4",
  "pillow>=11,<12",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0,<3",
  "structlog>=24.4,<26",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.34,<1",
  "watchfiles>=1,<2",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
